--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,7 +3,10 @@
   "robotLength": 0.9,
   "holonomicMode": true,
   "pathFolders": [],
-  "autoFolders": [],
+  "autoFolders": [
+    "New Folder",
+    "New New Folder"
+  ],
   "defaultMaxVel": 4.0,
   "defaultMaxAccel": 3.4,
   "defaultMaxAngVel": 540.0,
